# performance-landscapes-text-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: README.md  app.py  config.py  visualization.py
data/: README.md
docs/: project_summary.md
notebooks/: 01_eda.ipynb  02_model_grid_experiment.ipynb  04_surface_plot_exploration.ipynb
src/performance_landscapes/: __init__.py  data.py  eda.py  heatmaps.py  modeling.py  paths.py  surfaces.py
